appId: com.andhraessence.app
path: maestro/screens/onboarding_to_login.yaml
---
- launchApp
- waitForAnimationToEnd
- tapOn: { text: "Get Started" }
- waitForAnimationToEnd
- tapOn: { id: btn-skip }
- waitForAnimationToEnd
- assertVisible: { id: input-email }
- assertVisible: { id: input-password }
- tapOn: { id: input-email }
- inputText: "customer@example.com"
- tapOn: { id: input-password }
- inputText: "customer123"
- tapOn: { id: btn-signin }
- waitForAnimationToEnd
- waitForAnimationToEnd
- waitForAnimationToEnd
